omg/must-gather.local.4006501640973190033/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-d3f9cf59774b6757092795684cbdfa01517af1dbefa74ae6347c451dd292c7e8/namespaces/openshift-monitoring/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-02T12:45:37Z"
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: operator
      operation: Update
      time: "2023-05-02T12:45:37Z"
    name: alertmanager-main
    namespace: openshift-monitoring
    resourceVersion: "16315"
    uid: cdb643e4-6895-41e3-a898-97e9b701aad1
  spec:
    host: alertmanager-main-openshift-monitoring.apps.sno.gw.lo
    path: /api
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: alertmanager-main
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-02T12:45:37Z"
        status: "True"
        type: Admitted
      host: alertmanager-main-openshift-monitoring.apps.sno.gw.lo
      routerCanonicalHostname: router-default.apps.sno.gw.lo
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-02T12:45:37Z"
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: operator
      operation: Update
      time: "2023-05-02T12:45:37Z"
    name: prometheus-k8s
    namespace: openshift-monitoring
    resourceVersion: "16317"
    uid: 46a7d0bb-a671-4c15-bcc8-3b9c5d599f5f
  spec:
    host: prometheus-k8s-openshift-monitoring.apps.sno.gw.lo
    path: /api
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: prometheus-k8s
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-02T12:45:37Z"
        status: "True"
        type: Admitted
      host: prometheus-k8s-openshift-monitoring.apps.sno.gw.lo
      routerCanonicalHostname: router-default.apps.sno.gw.lo
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-02T12:45:38Z"
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: operator
      operation: Update
      time: "2023-05-02T12:45:38Z"
    name: prometheus-k8s-federate
    namespace: openshift-monitoring
    resourceVersion: "16321"
    uid: 7f6060d8-6506-42e9-84b6-d05c7c9660fe
  spec:
    host: prometheus-k8s-federate-openshift-monitoring.apps.sno.gw.lo
    path: /federate
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: prometheus-k8s
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-02T12:45:38Z"
        status: "True"
        type: Admitted
      host: prometheus-k8s-federate-openshift-monitoring.apps.sno.gw.lo
      routerCanonicalHostname: router-default.apps.sno.gw.lo
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-02T12:45:37Z"
    labels:
      app.kubernetes.io/component: query-layer
      app.kubernetes.io/instance: thanos-querier
      app.kubernetes.io/name: thanos-query
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 0.28.1
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
        f:spec:
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: operator
      operation: Update
      time: "2023-05-02T12:45:37Z"
    name: thanos-querier
    namespace: openshift-monitoring
    resourceVersion: "16316"
    uid: be06cf79-5d6c-4959-88b5-10c16dc40274
  spec:
    host: thanos-querier-openshift-monitoring.apps.sno.gw.lo
    path: /api
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: thanos-querier
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-02T12:45:37Z"
        status: "True"
        type: Admitted
      host: thanos-querier-openshift-monitoring.apps.sno.gw.lo
      routerCanonicalHostname: router-default.apps.sno.gw.lo
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "684657"
